--- a/11ty/2022.md
+++ b/11ty/2022.md
@@ -12,7 +12,7 @@ Now that we’re clear on that, I can rant and rave about the past year to the s
 
 2021 for me was exigent - demanding heavy attention and involvement in things that I definitely did not envision myself doing.
 
-Three unfinished books, two unfinished projects, one breakup  and one cat death later - I still daresay this year could have been much worse.
+Three unfinished books, two unfinished projects and one cat death later - I still daresay this year could have been much worse.
 I’ve been fortunate enough to not lose anyone to *you-know-what,* and have learned a fair amount of new (and unexpected) things, at the cost of things I actually planned to learn.
 
 ### Reading
@@ -74,8 +74,7 @@ I’m not big into seasonal games anymore, but if I’m ever going to play any i
 ### Work and Life
 
 I’m currently working at [DeepSource](https://deepsource.io/) on static analyzers - and content with this choice.
-As mentioned in the beginning of this post, there were a fair amount of upsets.
-The last two in that list are too personal in nature to cover on a public blog, but a number of unaccomplished goals will spill over to the next year:
+There are however a number of unaccomplished goals will spill over to the next year:
 
 - Learning the piano. Couldn’t manage my time efficiently enough to do this.
 - Consistency with color theory and pixel art.
