--- a/11ty/2022.md
+++ b/11ty/2022.md
@@ -23,15 +23,31 @@ Regardless, here’s the favorite books I finished in 2021:
 
 1. [1984](https://en.wikipedia.org/wiki/Nineteen_Eighty-Four): Fashionably late with this one.
    It is an incredibly written book that I’m happy I read.
-   I will say I wasn’t as impressed as I thought I would be, owing completely to over-expectation. **8/10**.
-2. [SICP](https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html): It’s a bit slow to start put picks up pace rather fast, and teaches imperative minds that parentheses can be beautiful. Cool algorithms, decent exercises, fun concepts and a good book. **7/10.**
-3. [Dune](https://en.wikipedia.org/wiki/Dune_(novel)): I’ve finished the first paperback. Herbert’s writing takes a little getting used to, and the story is slow to start off, but the concepts explored by this piece are intriguing. I also love the author’s depiction of prescience, it’s largely non-cliché. Currently, I’m reading it’s sequel - ‘Dune: Messiah’. **7/10.**
-4. [MMURTL](http://www.ipdatacorp.com/mmurtl/): An okay-book for new OS developers. I’m sure it was an amazing book in the year 2000, it just hasn’t aged that well. It is likely that I rate this higher on a re-read once I’m more acquainted to OS internals. For now though, 5/10.
-5. [OSTEP](https://pages.cs.wisc.edu/~remzi/OSTEP/): Could be a bit too beginner-y for some, but it’s a near perfect introductory book to OS internals. **9/10.**
-6. [On Writing Well](https://www.amazon.in/Writing-Wel-Classic-Guide-Nonfiction/dp/0060891548): Beautiful guide. It’s reasonably short, but I feel it could have been shorter in some chapters. Very straightforward and leaves the reader with a clear idea of mistakes to fix and skills to improve on. **9/10.**
-7. [PoPL (UPenn)](https://www.cis.upenn.edu/~cis120/archive/19fa/notes/120notes.pdf): Originally written as lecture-notes for graduate students at University of Pensylvania, this is the easiest introduction to operational semantics and formal verification that I know of. Props to the professors for making this available for free. **10/10.**
+   However, I wasn’t as impressed as I thought I would be, owing completely to over-expectation. **8/10**.
+2. [SICP](https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html):
+   It’s a bit slow to start put picks up pace rather fast,
+   and teaches imperative minds that parentheses can be beautiful.
+   Cool algorithms, decent exercises, fun concepts and a good book. **7/10.**
+3. [Dune](https://en.wikipedia.org/wiki/Dune_(novel)): I’ve finished the first paperback
+   Herbert’s writing takes a little getting used to, and the story is slow to start off, but the concepts explored by this piece are intriguing.
+   I also love the author’s depiction of prescience, it’s largely non-cliché.
+   Currently, I’m reading it’s sequel - ‘Dune: Messiah’. **7/10.**
+4. [MMURTL](http://www.ipdatacorp.com/mmurtl/): An okay-book for new OS developers.
+   I’m sure it was an amazing book in the year 2000, it just hasn’t aged that well.
+   It is likely that I rate this higher on a re-read once I’m more acquainted to OS internals.
+   For now though, 5/10.
+5. [OSTEP](https://pages.cs.wisc.edu/~remzi/OSTEP/): Could be a bit too beginner-y for some,
+   but it’s a near perfect introductory book to OS internals. **9/10.**
+6. [On Writing Well](https://www.amazon.in/Writing-Wel-Classic-Guide-Nonfiction/dp/0060891548): Beautiful guide.
+   It’s reasonably short, but I feel it could have been shorter in some chapters.
+   Very straightforward and leaves the reader with a clear idea of mistakes to fix and skills to improve on.
+   **9/10.**
+7. [PoPL (UPenn)](https://www.cis.upenn.edu/~cis120/archive/19fa/notes/120notes.pdf):
+   Originally written as lecture-notes for graduate students at University of Pensylvania, this is the easiest introduction to operational semantics and formal verification that I know of.
+   Props to the professors for making this available for free. **10/10.**
 
-There are several other books and web-novels that I dropped halfway through, so I refuse to count them. Hopefully by next year’s post I’ll have restored this habit.
+There are several other books and web-novels that I dropped halfway through, so I refuse to count them.
+Hopefully by next year’s post I’ll have restored this habit.
 
 ### Game-dev
 
